--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "framer-motion": "^11.5.4",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-big-calendar": "^1.14.1",
+    "react-calendar": "^5.0.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-modal": "^3.16.1",
     "react-pdf": "^9.1.0",
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.26.1",
